cluster/apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: http
  type: ClusterIP
